--- a/server/package.json
+++ b/server/package.json
@@ -40,8 +40,10 @@
     "jet-validator": "^1.1.1",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
-    "ts-command-line-args": "^2.5.1"
+    "ts-command-line-args": "^2.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
