--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "antd": "^5.8.6",
     "axios": "^1.5.0",
     "domhandler": "^5.0.3",
     "domutils": "^3.1.0",
